--- a/web/package.json
+++ b/web/package.json
@@ -14,12 +14,14 @@
     "react-app-rewire-aliases": "^0.2.0",
     "react-app-rewired": "^2.1.5",
     "react-burger-menu": "^2.6.13",
+    "react-cookie": "^4.0.3",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-font-loader": "^0.0.8",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-mailchimp-form": "^1.0.2",
     "react-parallax": "^3.0.3",
+    "react-player": "^1.15.3",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
